# turbocommerce

./: Cargo.toml  README.md  spin.toml
.github/workflows/: ci.yml
crates/edge-cache/: Cargo.toml
crates/edge-cache/src/: fragment.rs  headers.rs  key.rs  lib.rs  policy.rs
crates/edge-core/: Cargo.toml
crates/edge-core/src/: config.rs  context.rs  lib.rs  lifecycle.rs  workload.rs
crates/edge-data/: Cargo.toml
crates/edge-data/src/: client.rs  dependency.rs  lib.rs  retry.rs  timeout.rs
crates/edge-executor/: Cargo.toml
crates/edge-executor/src/: fallback.rs  lib.rs  ordering.rs  scheduler.rs
crates/edge-macros/: Cargo.toml
crates/edge-macros/src/: lib.rs
crates/edge-observability/: Cargo.toml
crates/edge-observability/src/: lib.rs  logging.rs  metrics.rs  replay.rs  span.rs
crates/edge-sdk/: Cargo.toml
crates/edge-sdk/src/: lib.rs
crates/edge-security/: Cargo.toml
crates/edge-security/src/: allowlist.rs  integrity.rs  lib.rs  limits.rs  sandbox.rs
crates/edge-streaming/: Cargo.toml
crates/edge-streaming/src/: flush.rs  lib.rs  section.rs  shell.rs  sink.rs
crates/turbo-auth/: Cargo.toml
crates/turbo-auth/src/: error.rs  lib.rs  password.rs  session.rs  token.rs  user.rs
crates/turbo-cache/: Cargo.toml
crates/turbo-cache/src/: error.rs  kv.rs  lib.rs  session.rs
crates/turbo-commerce/: Cargo.toml
crates/turbo-commerce/src/: error.rs  ids.rs  lib.rs  money.rs
crates/turbo-commerce/src/cart/: cart.rs  discount.rs  mod.rs  pricing.rs
crates/turbo-commerce/src/catalog/: category.rs  inventory.rs  mod.rs  product.rs
crates/turbo-commerce/src/checkout/: address.rs  flow.rs  mod.rs  order.rs  shipping.rs
crates/turbo-commerce/src/search/: filter.rs  mod.rs  query.rs  results.rs
crates/turbo-core/: Cargo.toml
crates/turbo-core/src/: app.rs  error.rs  lib.rs  prelude.rs  server.rs
crates/turbo-data/: Cargo.toml
crates/turbo-data/src/: error.rs  lib.rs  request.rs  response.rs
crates/turbo-db/: Cargo.toml
crates/turbo-db/src/: db.rs  error.rs  lib.rs  types.rs
crates/turbo-macros/: Cargo.toml
crates/turbo-macros/src/: lib.rs
crates/turbo-macros/tests/: macro_tests.rs
crates/turbo-macros/tests/ui/: page_missing_path.rs  page_missing_path.stderr
crates/turbo-router/: Cargo.toml
crates/turbo-router/src/: lib.rs  prelude.rs  route.rs
crates/turbo-sdk/: Cargo.toml
crates/turbo-sdk/src/: lib.rs  prelude.rs
examples/turbo-storefront/: Cargo.toml  spin.toml
examples/turbo-storefront/migrations/: init.sql
examples/turbo-storefront/src/: app.rs  lib.rs  main.rs  server.rs
examples/turbo-storefront/style/: main.css
src/: lib.rs
tools/edge-cli/: Cargo.toml
tools/edge-cli/src/: config.rs  context.rs  main.rs  output.rs
tools/edge-cli/src/commands/: build.rs  config.rs  deploy.rs  init.rs  mod.rs  replay.rs  rollback.rs  versions.rs
turbo-demo/: Cargo.toml  README.md  spin.toml
turbo-demo/src/: app.rs
workloads/ecommerce-pdp/: Cargo.toml  edge.toml  spin.toml
workloads/ecommerce-pdp/src/: lib.rs
workloads/ecommerce-pdp/src/data/: mod.rs  product.rs  review.rs
workloads/ecommerce-pdp/src/sections/: hero.rs  inventory.rs  mod.rs  pricing.rs  recommendations.rs  reviews.rs
workloads/hello-wasm/: Cargo.toml
workloads/hello-wasm/src/: lib.rs
workloads/marketing-landing/: Cargo.toml  edge.toml  spin.toml
workloads/marketing-landing/src/: lib.rs
workloads/marketing-landing/src/data/: cms.rs  mod.rs
workloads/marketing-landing/src/sections/: cta.rs  features.rs  hero.rs  mod.rs  newsletter.rs  testimonials.rs
workloads/search-results/: Cargo.toml  edge.toml  spin.toml
workloads/search-results/src/: lib.rs
workloads/search-results/src/data/: mod.rs  product.rs  search.rs
workloads/search-results/src/sections/: facets.rs  header.rs  mod.rs  results.rs  sponsored.rs
