[workspace]
resolver = "2"
members = [
    # TurboCommerce framework crates
    "crates/turbo-macros",
    "crates/turbo-router",
    "crates/turbo-core",
    "crates/turbo-sdk",
    # Data layer crates
    "crates/turbo-cache",
    "crates/turbo-db",
    "crates/turbo-data",
    # Commerce layer crates
    "crates/turbo-commerce",
    "crates/turbo-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["edisonylee <edisonydlee@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# TurboCommerce framework crates
turbo-macros = { path = "crates/turbo-macros" }
turbo-router = { path = "crates/turbo-router" }
turbo-core = { path = "crates/turbo-core" }
turbo-sdk = { path = "crates/turbo-sdk" }
# Data layer crates
turbo-cache = { path = "crates/turbo-cache" }
turbo-db = { path = "crates/turbo-db" }
turbo-data = { path = "crates/turbo-data" }
# Commerce layer crates
turbo-commerce = { path = "crates/turbo-commerce" }
turbo-auth = { path = "crates/turbo-auth" }

# Leptos ecosystem
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

# External dependencies
anyhow = "1"
spin-sdk = "5.0.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
http = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[patch.crates-io]
base64ct = "1.7.1"
