[package]
name = "edge-core"
description = "Core abstractions for the edge streaming SSR platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
http.workspace = true
