[package]
name = "edge-data"
description = "Data access layer with dependency tagging and timeouts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
edge-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
spin-sdk.workspace = true
futures.workspace = true
