[package]
name = "edge-streaming"
description = "Streaming primitives for shell-first SSR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
edge-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
spin-sdk.workspace = true
