[package]
name = "turbo-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Type-safe Key-Value caching layer for TurboCommerce"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = "3"
