[package]
name = "turbo-commerce"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "E-commerce domain types and logic for TurboCommerce"

[dependencies]
# Internal crates (optional)
turbo-db = { path = "../turbo-db", optional = true }
turbo-cache = { path = "../turbo-cache", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

[features]
default = []
storage = ["dep:turbo-db", "dep:turbo-cache"]
