[package]
name = "turbo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core framework for TurboCommerce - Leptos + Streaming SSR"

[dependencies]
# Leptos ecosystem
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

# Internal crates
turbo-router = { path = "../turbo-router" }

# Async
futures = "0.3"

# Error handling
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos_wasi = { version = "0.1.3", optional = true }
spin-sdk = { version = "3", optional = true }
wasi = { version = "0.13", optional = true }

[features]
default = []
ssr = ["dep:leptos_wasi", "dep:spin-sdk", "dep:wasi", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
hydrate = ["leptos/hydrate"]
