[package]
name = "turbo-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP client utilities for TurboCommerce"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = "3"
