[package]
name = "turbo-storefront"
version = "0.1.0"
edition = "2021"
description = "Example TurboCommerce storefront"

[lib]
crate-type = ["cdylib"]

# Make this a standalone workspace (required for cargo-leptos)
[workspace]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
leptos_wasi = { version = "0.1.3", optional = true }
spin-sdk = { version = "3", optional = true }
# Pin exact versions for WASM compatibility
wasi = { version = "=0.13.2", optional = true }
wasm-bindgen = { version = "=0.2.96", optional = true }
# Data layer crates
turbo-db = { path = "../../crates/turbo-db", optional = true }
turbo-cache = { path = "../../crates/turbo-cache", optional = true }
# Commerce layer crates
turbo-commerce = { path = "../../crates/turbo-commerce", optional = true }
turbo-auth = { path = "../../crates/turbo-auth", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "dep:spin-sdk",
    "dep:leptos_wasi",
    "dep:wasi",
    "dep:turbo-db",
    "dep:turbo-cache",
    "dep:turbo-commerce",
    "dep:turbo-auth",
]

[package.metadata.leptos]
output-name = "turbo_storefront"
style-file = "style/main.css"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
