[package]
name = "edge-cli"
description = "CLI tool for the edge streaming SSR platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "edge"
path = "src/main.rs"

[dependencies]
edge-core.workspace = true
edge-observability.workspace = true
edge-security.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
toml.workspace = true
chrono.workspace = true
